docs: Fix sidebar squashing, add icons to shared module

--- a/apps/docs/src/app/documentation/core-helpers/sections-toolbar/sections-toolbar.component.scss
+++ b/apps/docs/src/app/documentation/core-helpers/sections-toolbar/sections-toolbar.component.scss
@@ -15,6 +15,7 @@
     flex-wrap: nowrap;
     white-space: nowrap;
     overflow: hidden;
+    flex-grow: 1;
 }
 
 .fd-docs-sidebar-content {
